# deep-learning-assignment

./: .gitignore  changes.patch  main.py  metrics_history.json  pyproject.toml  runs.csv  runs.json
artifacts/own_dataset/deit_tiny_patch16_224/20251104-204211/: config.json  metrics_history.json  results.json
artifacts/own_dataset/deit_tiny_patch16_224/20251104-204501/: config.json  metrics_history.json  results.json
artifacts/own_dataset/deit_tiny_patch16_224/20251104-204602/: config.json  metrics_history.json  results.json
artifacts/own_dataset/deit_tiny_patch16_224/20251104-204829/: config.json  metrics_history.json  results.json
artifacts/own_dataset/deit_tiny_patch16_224/20251104-210903/: config.json  metrics_history.json  results.json
artifacts/own_dataset/deit_tiny_patch16_224/20251104-211107/: config.json  metrics_history.json  results.json
artifacts/own_dataset/deit_tiny_patch16_224/20251104-211714/: config.json
artifacts/own_dataset/tiny_vit_21m_224.dist_in22k_ft_in1k/20251104-212325/: config.json  metrics_history.json  results.json
artifacts/pooled_dataset/deit_tiny_patch16_224/20251104-221606/: config.json  metrics_history.json  results.json
artifacts/pooled_dataset/tiny_vit_21m_224.dist_in22k_ft_in1k/20251104-220122/: config.json  metrics_history.json  results.json
data/: attributes.yaml  classes.txt  labels.csv  legend.txt
data_pooled/: attributes.yaml  classes.txt  labels.csv
docs/: gallery.html
notebooks/: DeiT-Tiny_on_dataset1.ipynb  data_audit.ipynb
src/project_dl/: __init__.py  dataset.py  model.py  train.py
